update env and logout
